<resources>
  <string name="app_name">Sin Sueños</string>

  <string name="title_home">Band</string>
  <string name="title_dashboard">Songs</string>
  <string name="title_notifications">Notifications</string>

  <string name="title_disks">Disks</string>
  <string name="title_stars">Stars</string>

  <string name="text_notifications">Check out our social networks news about us!</string>

  <string name="band_text_info">We\'re \'Sin Sueños\' (Without Dreams) because when we form our band we fulfilled ours.</string>
  <string name="disclamer">©2018. All rights are reserved for authors, composers, phonographic producer, editor, and performers of the works reproduced in this application. It is forbidden the reproduction, re-recording, rental, loan, exchange, public performance of musical works, and broadcast via any means of communication and procedure without prior authorization or any other unauthorized use. SADAIC - BIEM / AADI - CAPIF. Argentine industry. Disco es Cultura.</string>


  <string name="band_members">Band members</string>

  <string name="on_guitar_and_vocals">On Guitar and Vocals:</string>
  <string name="on_bass_and_chorus">On Bass and Chorus:</string>
  <string name="on_guitar">On Guitars:</string>
  <string name="on_guitar_and_chorus">On Guitars and Chorus:</string>
  <string name="on_percussion">On Percussion:</string>
  <string name="on_drums_and_chorus">On Drums and Chorus:</string>
  <string name="on_acoustic_guitar">On Acoustic Guitars:</string>

  <string name="lucas_aragon">Lucas Aragon</string>
  <string name="mauro_g_mez">Mauro Gómez</string>
  <string name="diego_robles">Diego Robles</string>
  <string name="maximiliano_navarro">Maximiliano Navarro</string>
  <string name="lucas_videla">Lucas Videla</string>
  <string name="guillermo_guerra">Guillermo Guerra</string>
  <string name="lucho_arrieta">Lucho Arrieta</string>
  <string name="record_place">Estudios \'Lucho Arrieta\'</string>
  <string name="rodrigo_grasetti">Rodrigo Grasetti</string>

  <string name="mastering">Mastering:</string>
  <string name="recorded_and_mixed">Recorded and Mixed:</string>
  <string name="mixing_technicians">Mixing Technicians:</string>
  <string name="musical_production">Musical Production:</string>
  <string name="artists_invited_to_play">Artists invited to play</string>
  <string name="on_Cicatrices_album">on “Cicatrices” album</string>

  <!-- DISK DATA -->
  <string-array name="disk_names">
    <item>Cicatrices</item>
  </string-array>
  <string-array name="disk_ids">
    <item>1</item>
  </string-array>

  <string-array name="begin_dates">
    <item>1498878000000</item>
  </string-array>

  <string-array name="end_dates">
    <item>1527822000000</item>
  </string-array>

  <!-- TRACK DATA -->
  <string-array name="trak_disk_ids">
    <item>1</item>
    <item>1</item>
    <item>1</item>
    <item>1</item>
    <item>1</item>
    <item>1</item>
    <item>1</item>
    <item>1</item>
  </string-array>

  <string-array name="track_names">
    <item>Cicatrices</item>
    <item>Mitomanias para el corazón</item>
    <item>Cuando el sol se va</item>
    <item>Hermoso sueño</item>
    <item>Pensando en ti</item>
    <item>Quisiera saber</item>
    <item>Te escribiré</item>
    <item>Tu efecto</item>
  </string-array>

  <string-array name="track_lyrics">
    <item>Es lo que dices, lo que significa\n
Camino entre vosotros, pero no soy uno de ustedes\n
Es tu forma de explicar, lo inexplicable\n
Es tu forma de ser inculta.\n
\n
Me pediste un tiempo, voy a seguir esperándote\n
Y aunque alguna vez lo pensé, solo no voy a quedarme\n
Porque tengo mi guitarra, y mi voz\n
Y por supuesto las palabras, del señor Young.\n
\n
El valor, no es la ausencia del miedo\n
Tengo la sangre azul, llena de cicatrices\n
Es un concepto vago, de lo que hiciste\n
Tengo una bala en el cargador, y voy a disparar hacia delante\n
\n
Es tu forma de explicar lo inexplicable\n
Es tu forma de ser inculta\n
Carente de experiencia e ilusa\n
Enfrento a la muerte\n
Y soy quien propicia mi suerte.</item>
    <item>Escribiré mil canciones, ahora que no te tengo\n
Tendré tiempo para hacer, lo que ya venía haciendo\n
Tendré tiempo para estar, con la gente que más quiero\n
Y de que me sirve eso, si es a ti a quien yo quiero.\n
\n
No me digas que no cuesta\n
Como cuesta seguir\n
Cuesta arriba esta mi vida\n
Y no alcanzo a ver la cima\n
\n
Y no me digas que no cuesta\n
Como cuesta seguir\n
Cuesta arriba esta mi vida\n
Y no alcanzo a ver la cima si vos.\n
\n
Me robaste el alma\n
Me robaste la ilusión\n
Te llevaste todos mis sueños\n
Cargados en tu mochila\n
De odio y de rencor\n
Sabia me querías como poeta buen artista\n
Actor de revistas, mitomanías para el corazón\n
Pero lo que no sabía era que no me querías\n
Realmente como soy…\n
\n
No me digas que no cuesta\n
Como cuesta seguir\n
Cuesta arriba esta mi vida\n
Y no alcanzo a ver la cima\n
Y no me digas que no cuesta\n
Como cuesta seguir\n
Cuesta arriba esta mi vida\n
Y no alcanzo a ver la cima si vos.\n
\n
No me digas que no cuesta\n
Como cuesta seguir\n
Cuesta arriba esta mi vida\n
Y no alcanzo a ver la cima sin vos.</item>
    <item>
      Cuando tu único amigo es la soledad \n
Ya no hay nada en que creer o en que confiar \n
Igual ya naciste, no hay más remedio a esta enfermedad \n
Debes aprender a vivir feliz, junto a tu infelicidad \n
\n
Antes que esto nada era igual \n
Recuerdo de algo que no fue nada \n
Tú dulzura, alegría y bondad \n
No se mas en que pensar.\n
\n
Si te fuiste como el agua entre mis manos \n
Y me dejaste en la oscuridad \n
Cuando el sol se va. \n
\n
Y como cuando el sol se va\n
 Se va, se va\n
Y me dejaste acá\n
 En la oscuridad\n
Y como cuando el sol se va\n
 Se va, se va, \n
Y me dejaste acá\n
 En la oscuridad\n
\n
No sé si sabes, mi corazón me late \n
Yo sé que es por algo más\n
Cerrar mis ojos, llegar al fondo, buscar la solución para encontrar tu amor\n
Complicado o no, buscare la forma de llegar a tu corazón\n
\n
 Tantos sueños y una realidad \n
Solo déjate llevar y echarte a  andar\n
Para que levantarse ahora \n
Que no hay más remedio a esta enfermedad\n
\n
Si te fuiste como el agua entre mis manos \n
Y me dejaste  en la oscuridad cuando el sol se va. \n
Y como cuando el sol se va\n
 Se va, se va\n
Y me dejaste acá\n
 En la oscuridad\n
Y como cuando el sol se va\n
 Se va, se va, \n
Y me dejaste acá\n
 En la oscuridad
    </item>
    <item>Es padrino del olvido, el dolor que creo en vos \n
No es por venganza, pero sí, porque si.\n
No me hables hoy, si mañana no voltearás ni a verme\n
 Procura que esté dormido, cuando salgas por la puerta de atrás\n
\n
 Y así creeré, que fue un hermoso sueño \n
Inventado en las enredaderas, de mis sábanas y tus piernas \n
Inventado en las enredaderas, de mis sábanas y tus piernas\n
\n
 Seré caballero cuando hable de sexo, seré poeta cuando me refiera al amor\n
Besare la niebla, para recordar los suyos \n
Aunque más que suyos, fueron míos para ella \n
De la mano de tu olvido, te llevaste algo de mí\n
Pienso algún día, en ir a pedirlo \n
Aunque ya no recuerdo, ni lo que perdí\n
\n
Y así creeré, que fue un hermoso sueño \n
Inventado en las enredaderas, de mis sábanas y tus piernas\n
Inventado en las enredaderas, de mis sábanas y tus piernas\n
\n
Yo estoy bien, como siempre  \n
En los mismos bares y en los mismos tragos \n
Con la misma gente, que hoy, ahora y por siempre \n
Ya no se atreverá ni a hablar\n
\n
Y así creeré, que fue un hermoso sueño \n
Inventado en las enredaderas, de mis sábanas y tus piernas\n
 Inventado en las enredaderas, de mis sábanas y tus piernas</item>
    <item>Cuando, sientas que tu corazón está confundido \n
Dale, un bofetón\n
Cuando, sientas que el tiempo ya no es el mismo \n
Ponle pausa a ese reloj\n
\n
Porque es hora de empezar de nuevo\n
 Sentarse un rato a reflexionar\n
No es cuestión de pensar,  en lo que pudo haber sido y lo que fue \n
Porque agua que no has de beber, déjala correr \n
\n
Debo de seguro estar enamorándome\n
Debo de seguro estar, pensando en vos \n
Debo de seguro otra vez \n
Estar pensando en ti, pensando en ti… sin mí.\n
\n
Sácame, de esta duda \n
Dime si soy yo el culpable\n
¿Qué hare cuando te vayas?\n
Dime si es el amor lo que se muere\n
 O soy yo el que se mata \n
\n
Porque es hora de empezar de nuevo\n
 Sentarse un rato a reflexionar\n
No es cuestión de pensar,  en lo que pudo haber sido y lo que fue \n
Porque agua que no has de beber, déjala correr \n
\n
Debo de seguro estar, enamorándome\n
Debo de seguro estar, pensando en vos \n
Debo de seguro otra vez \n
Estar pensando en ti, pensando en ti… sin mí.</item>
    <item>Quisiera saber \n
Si me has dejado de querer \n
Quisiera saber\n
Donde quedo nuestro amor \n
\n
Quizás lo guardas  \n
En algún viejo rincón\n
Quizás lo inmortalice \n
En esta canción \n
\n
Quisiera saber si me has dejado de querer\n
Quisiera saber\n
Donde quedo nuestro amor \n
\n
Quizás lo guardas \n
En algún viejo rincón\n
 Quizás lo inmortalice \n
En esta canción \n
\n
Quisiera saber quisiera saber…</item>
    <item>Voy a escribirte una canción, para inmortalizarte\n
Porque siento que, es bueno recordarte  \n
\n
Sé muy bien, que el tiempo de nuestro amor\n
 Fue tan corto, siento que, me encanto\n
 Sé muy bien, que hay rosas \n
Que con sus espinas, formaron coronas en mi corazón \n
\n
Pero tú, la rosa más hermosa \n
Que me acaricio, con sus pétalos \n
Curando mi corazón, curándome por dentro\n
Hoy vuelvo a creer en tus besos \n
\n
Voy a escribirte una canción, para inmortalizarte\n
Porque siento que, es bueno recordarte \n
\n
 Escribiré, que es bueno tenerte en las mañanas\n
 Cuando el sol cae en tu ventana\n
 Escribiré, que te ame \n
Aunque sea un instante yo te ame</item>
    <item>Nos volvemos a encontrar, en la nada misma \n
Y que encuentro tan casual, me empieza a fascinar \n
\n
Dimos tantas vueltas, para volvernos a encontrar \n
No es casualidad, es tu efecto residual \n
\n
Se me hizo oscura, la oportunidad \n
Y hasta el sol encandilo, a la más bella flor \n
Puedo ver tus ojos ahogándose, en el mar más dulce entre tu piel y mi piel \n
\n
Hoy las estrellas te envidiaran \n
Cuando te poses bajo la luna \n
Hoy mi almohada te reclama \n
Cuando te vas en la mañana\n
\n
Me preguntas, ¿por qué en vos tanto pienso? \n
Tengo una locura que no puedo contener \n
Dimos tantas vueltas, para volvernos a encontrar \n
No es casualidad, es tu efecto residual \n
\n
Hoy las estrellas te envidiaran \n
Cuando te poses bajo la luna\n
Hoy mi almohada te reclama \n
Cuando te vas en la mañana\n
\n
Hoy las estrellas te envidiaran \n
Cuando te poses bajo la luna\n
Hoy mi almohada te reclama \n
Cuando te vas en la mañana</item>
  </string-array>
  <string name="title_activity_disks">DisksActivity</string>
  <string name="title_activity_lyrics">LyricsActivity</string>
  <string name="app_typeface">title.ttf</string>
  <string name="cd_room_typeface">card_name.ttf</string>
  <string name="track_typeface">times.ttf</string>
  <string name="lyric_typeface">poems.ttf</string>
  <string name="EXTRA_DISK_TITLE">DISK_TITLE</string>
  <string name="EXTRA_TRACK_TITLE">TRACK_TITLE</string>
  <string name="EXTRA_TRACK_LYRIC">TRACK_LYRIC</string>
  <string name="EXTRA_TRACK_RESOURCE_MUSIC_IN_RAW">TRACK_RESOURCE_MUSIC_IN_RAW</string>
  <string name="EXTRA_DISK_ID">DISK_ID</string>
  <string name="EXTRA_CIRCULAR_REVEAL_X">CIRCULAR_REVEAL_X</string>
  <string name="EXTRA_CIRCULAR_REVEAL_Y">CIRCULAR_REVEAL_Y</string>
  <string name="EXTRA_DEFAULT">no title</string>
  <!--from disk list to disk details -->
  <string name="transition_disk_name_title">transition_disk_name_title</string>
  <!--from track list to track details -->
  <string name="transition_track_name_title">transition_track_name_title</string>
    <string name="failure_network_connection">There is not Networl connection</string>
  <string name="failure_list_unavailable">The list is unavailable</string>
  <string name="failure_server_error">The server is not available in this moment</string>

</resources>
